erDiagram
    orders {
        TEXT order_id PK "订单号（主键）"
        TEXT store_id "机构编码"
        TEXT store_name "门店名称"
        TEXT business_date "营业日期"
        TEXT order_month "订单月份"
        REAL order_amount "订单金额"
        REAL payment_total "支付合计（实收）"
        REAL order_discount "订单优惠"
        INTEGER guest_count "用餐人数"
        TEXT order_status "订单状态"
    }

    order_dishes {
        INTEGER id PK "自增主键"
        TEXT order_id FK "订单编号"
        TEXT dish_name "菜品名称"
        TEXT dish_code "菜品编码"
        INTEGER quantity "销售数量"
        REAL amount "金额合计"
        REAL income "菜品收入"
    }

    order_payments {
        INTEGER id PK "自增主键"
        TEXT order_id FK "订单编号"
        TEXT payment_method "支付方式"
        REAL payment_amount "支付金额"
        TEXT status "状态"
        TEXT flow_no "流水号"
    }

    sales_summary {
        TEXT id PK "UUID"
        TEXT store_id "门店编码"
        TEXT date "日期"
        INTEGER order_count "订单数"
        REAL total_revenue "营业额"
        REAL avg_order_amount "客单价"
    }

    monthly_summary {
        TEXT id PK "UUID"
        TEXT store_id "门店编码"
        TEXT month "月份"
        INTEGER order_count "订单数"
        REAL total_revenue "月营业额"
        REAL avg_order_amount "客单价"
    }

    item_sales_summary {
        TEXT id PK "UUID"
        TEXT store_id "门店编码"
        TEXT item_name "菜品名称"
        TEXT date "日期"
        INTEGER total_quantity "总销量"
        REAL total_amount "总销售额"
        REAL contribution_ratio "贡献率"
    }

    orders ||--o{ order_dishes : "一订单 → 多菜品"
    orders ||--o{ order_payments : "一订单 → 多支付"
    orders }o--|| sales_summary : "聚合计算（按店按天）"
    orders }o--|| monthly_summary : "聚合计算（按店按月）"
    order_dishes }o--|| item_sales_summary : "聚合计算（菜品销量）"
